--- a/ALMailam/Code/Dev/MasterSetupService/src/main/resources/application.properties
+++ b/ALMailam/Code/Dev/MasterSetupService/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.servlet.context-path=/classicwms/api/wms-masters-service
 
 #--------------data-source configurations--------------------------
 
-spring.datasource.url=jdbc:sqlserver://35.154.84.178;databaseName=WMS_ALMDEV
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=WMS_ALMDEV
 spring.datasource.username=sa
-spring.datasource.password=30NcyBuK
+spring.datasource.password=root
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=false
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
