--- a/ALMailam/Code/Dev/WrapperService/src/main/resources/application.properties
+++ b/ALMailam/Code/Dev/WrapperService/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8386
 
 server.servlet.context-path=/classicwms
 
-spring.datasource.url=jdbc:sqlserver://35.154.84.178;databaseName=WMS_ALMDEV
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=WMS_ALMDEV
 spring.datasource.username=sa
-spring.datasource.password=30NcyBuK
+spring.datasource.password=root
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=false
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
