--- a/ALMConnector/Code/Project/ConnectorService/src/main/resources/application.properties
+++ b/ALMConnector/Code/Project/ConnectorService/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 server.port=9191
 server.servlet.context-path=/almailem/api/alm-connector-service
 
-spring.datasource.url=jdbc:sqlserver://35.154.84.178;databaseName=WMS_ALMDEV
+spring.datasource.url=jdbc:sqlserver://3.109.20.248;databaseName=WMS_ALMDEV
 spring.datasource.username=sa
-spring.datasource.password=30NcyBuK
+spring.datasource.password=Do1cavIFK4^$pQ^zZYsX
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=false
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
