picklist_inv_fix_oml

--- a/ALMailam/Code/Dev/TransactionService/src/main/resources/application-messages.properties
+++ b/ALMailam/Code/Dev/TransactionService/src/main/resources/application-messages.properties
@@ -65,3 +65,6 @@ api.masters.service.url=http://localhost:8082/classicwms/api/wms-masters-service
 api.idmaster.service.url=http://localhost:8085/classicwms/api/wms-idmaster-service/
 #api.connector.service.url=http://13.234.179.29:9191/almailem/api/alm-connector-service/
 api.connector.service.url=http://91.140.230.45:9191/almailem/api/alm-connector-service/
+
+#-----------ERROR_LOG-----------------------------------------------------------------------------------------
+errorlog.folder.name=D:\Murugavel\Project\7horses\root\Classic WMS\Logs\TransactionLog
