--- a/ALMailam/Code/Dev/TransactionService/build.gradle
+++ b/ALMailam/Code/Dev/TransactionService/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 	
 	implementation group: 'org.apache.poi', name: 'poi', version: '3.9'
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.9'
+
+	implementation group: 'com.opencsv', name: 'opencsv', version: '3.7'
 	
 	//runtimeOnly 'mysql:mysql-connector-java'
 	implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '8.1.0.jre8-preview'
