allocation_based_on_level_id

--- a/ALMailam/Code/Dev/TransactionService/src/main/resources/application-messages.properties
+++ b/ALMailam/Code/Dev/TransactionService/src/main/resources/application-messages.properties
@@ -69,3 +69,8 @@ api.connector.service.url=http://91.140.230.45:9191/almailem/api/alm-connector-s
 #-----------ERROR_LOG-----------------------------------------------------------------------------------------
 #errorlog.folder.name=D:\Murugavel\Project\7horses\root\ClassicWMS\Logs\TransactionLog
 errorlog.folder.name=D:\errorLog\Logs\TransactionLog
+
+#-----------INVENTORY---STRATEGY---CONFIGURATION--------------------------------------------------------------
+#------SB_CTD_ON,SB_LEVEL_ID
+#order.allocation.strategy.choice=SB_CTD_ON
+order.allocation.strategy.choice=SB_LEVEL_ID
