ib_smry_rpt_status_id_fix_bin_get_exception_added_oml_allocation_best_fit

--- a/ALMailam/Code/Dev/TransactionService/src/main/resources/application-messages.properties
+++ b/ALMailam/Code/Dev/TransactionService/src/main/resources/application-messages.properties
@@ -72,5 +72,6 @@ errorlog.folder.name=D:\errorLog\Logs\TransactionLog
 
 #-----------INVENTORY---STRATEGY---CONFIGURATION--------------------------------------------------------------
 #------SB_CTD_ON,SB_LEVEL_ID
-order.allocation.strategy.choice=SB_CTD_ON
+#order.allocation.strategy.choice=SB_CTD_ON
 #order.allocation.strategy.choice=SB_LEVEL_ID
+order.allocation.strategy.choice=SB_SB_BEST_FIT
