oml_allocation_best_fit

--- a/ALMailam/Code/Dev/TransactionService/src/main/resources/application-messages.properties
+++ b/ALMailam/Code/Dev/TransactionService/src/main/resources/application-messages.properties
@@ -71,7 +71,7 @@ api.connector.service.url=http://91.140.230.45:9191/almailem/api/alm-connector-s
 errorlog.folder.name=D:\errorLog\Logs\TransactionLog
 
 #-----------INVENTORY---STRATEGY---CONFIGURATION--------------------------------------------------------------
-#------SB_CTD_ON,SB_LEVEL_ID
+#------SB_CTD_ON,SB_LEVEL_ID,SB_BEST_FIT
 #order.allocation.strategy.choice=SB_CTD_ON
 #order.allocation.strategy.choice=SB_LEVEL_ID
-order.allocation.strategy.choice=SB_SB_BEST_FIT
+order.allocation.strategy.choice=SB_BEST_FIT
