--- a/ALMailam/Code/Dev/TransactionService/src/main/resources/application.properties
+++ b/ALMailam/Code/Dev/TransactionService/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=8584
 #server.port=8284
 server.servlet.context-path=/classicwms/api/wms-transaction-service
 
-spring.datasource.url=jdbc:sqlserver://3.109.20.248;databaseName=WMS_ALMDEV
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=WMS_ALMDEV
 spring.datasource.username=sa
-spring.datasource.password=Do1cavIFK4^$pQ^zZYsX
+spring.datasource.password=root
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=false
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
