--- a/IWB2B/Code/Java/V3_Service_Split/B2BIntegrationService/src/main/resources/application.properties
+++ b/IWB2B/Code/Java/V3_Service_Split/B2BIntegrationService/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=5003
 
 server.servlet.context-path=/iwe/api/b2b-integration-service
 
-spring.datasource.url=jdbc:sqlserver://35.154.84.178;databaseName=IWE
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=IWE
 spring.datasource.username=sa
-spring.datasource.password=30NcyBuK
+spring.datasource.password=root
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=false
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
