--- a/ALMailam/Code/Dev/TransactionService/build.gradle
+++ b/ALMailam/Code/Dev/TransactionService/build.gradle
@@ -48,7 +48,10 @@ dependencies {
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.9'
 
 	implementation group: 'com.opencsv', name: 'opencsv', version: '3.7'
-	
+
+	// https://mvnrepository.com/artifact/org.springframework.retry/spring-retry
+	implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.5'
+
 	//runtimeOnly 'mysql:mysql-connector-java'
 	implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '8.1.0.jre8-preview'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
