--- a/ALMailam/Code/Dev/IDMasterService/build.gradle
+++ b/ALMailam/Code/Dev/IDMasterService/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 	compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.5.0.RELEASE'
 	compile group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.2.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.4.1'
-	
+
 	compile("io.springfox:springfox-swagger2:2.9.2") {
 	    exclude module: 'mapstruct' // necessary in my case to not end up with multiple mapstruct versions
 	}
@@ -42,7 +42,7 @@ dependencies {
 	
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.2.0.RELEASE'
 	//runtimeOnly 'mysql:mysql-connector-java'
 	implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '8.1.0.jre8-preview'
 	
