--- a/ALMailam/Code/Dev/IDMasterService/src/main/resources/application.properties
+++ b/ALMailam/Code/Dev/IDMasterService/src/main/resources/application.properties
@@ -15,3 +15,19 @@ spring.jpa.hibernate.ddl-auto=update
 
 #security
 security.oauth2.resource.filter-order=3
+
+#----------------Spring - Mail Configuration----------------------
+spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+#spring.mail.host=smtp.office365.com
+spring.mail.port=587
+spring.mail.username=support@innerworks-kw.com
+spring.mail.password=Support@123
+#spring.mail.username=support@iwexpress.com
+#spring.mail.password=Iw@22062205
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=25000
+spring.mail.properties.mail.smtp.timeout=25000
+spring.mail.properties.mail.smtp.writetimeout=25000
