--- a/ALMailam/Code/Dev/IDMasterService/src/main/resources/application.properties
+++ b/ALMailam/Code/Dev/IDMasterService/src/main/resources/application.properties
@@ -21,8 +21,8 @@ spring.mail.protocol=smtp
 spring.mail.host=smtp.gmail.com
 #spring.mail.host=smtp.office365.com
 spring.mail.port=587
-spring.mail.username=support@innerworks-kw.com
-spring.mail.password=Support@123
+spring.mail.username=bharathipdk55@gmail.com
+spring.mail.password=Pappanviduthi55
 #spring.mail.username=support@iwexpress.com
 #spring.mail.password=Iw@22062205
 
