email_trigger_wrpr_code

--- a/ALMailam/Code/Dev/MasterSetupService/src/main/resources/application-messages.properties
+++ b/ALMailam/Code/Dev/MasterSetupService/src/main/resources/application-messages.properties
@@ -15,3 +15,6 @@ idmaster.oauth.access_token_url=http://localhost:8085/classicwms/api/wms-idmaste
 #-------Classic-WMS-Service-URL------------------------------------------------------------------------------
 api.idmaster.service.url=http://localhost:8085/classicwms/api/wms-idmaster-service/
 #api.idmaster.service.url=http://localhost:8285/classicwms/api/wms-idmaster-service/
+
+##################------EMAIL-----####################
+email.from.address=bharathipdk55@gmail.com
