--- a/ALMailam/Code/Dev/MasterSetupService/src/main/resources/application.properties
+++ b/ALMailam/Code/Dev/MasterSetupService/src/main/resources/application.properties
@@ -15,3 +15,17 @@ spring.jpa.hibernate.ddl-auto=update
 
 #security
 security.oauth2.resource.filter-order=3
+
+#----------------Spring - Mail Configuration----------------------
+spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+#spring.mail.host=smtp.office365.com
+spring.mail.port=587
+spring.mail.username=bharathipdk55@gmail.com
+spring.mail.password=Pappanviduthi55
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=25000
+spring.mail.properties.mail.smtp.timeout=25000
+spring.mail.properties.mail.smtp.writetimeout=25000
